UI: fix alignment of radio buttons in legacy forms. (#41439)
https://mantis.ilias.de/view.php?id=41439

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -8436,10 +8436,6 @@ select.form-control {
 .radio-inline input[type="radio"] {
   margin-top: 0px;
 }
-.radio input[type="radio"],
-.radio-inline input[type="radio"] {
-  vertical-align: top;
-}
 .radio .help-block {
   padding-left: 15px;
 }
